<resources>
    <string name="title_activity_maps">Carte</string>

<!--  Site  -->
    <string name="siteTitle">Liste des sites</string>
    <string name="addSite">Ajouter un site</string>
    <string name="updateSite">Modifier le site</string>
    <string name="labelSite">Nom du site</string>
    <string name="hintSite">Restaurant du exemple</string>
    <string name="latitude">Latitude</string>
    <string name="hintLatitude">49.1042</string>
    <string name="longitude">Longitude</string>
    <string name="hintLongitude">6.2082</string>
    <string name="postalAddress">Adresse postale</string>
    <string name="hintPostalAddress">69 Rue de l\'exemple</string>
    <string name="summary">Description</string>
    <string name="hintSummary">Le lieu bien connu à Metz</string>

<!--  Catégorie  -->
    <string name="categoryTitle">Liste des catégories</string>
    <string name="addCategory">Ajouter une catégorie</string>
    <string name="updateCategory">Modifier la catégorie</string>
    <string name="labelCategory">Nom de la catégorie</string>
    <string name="hintCategory">Parc</string>

<!--  Autre  -->
    <string name="map">Carte</string>
    <string name="site">Sites</string>
    <string name="category">Catégories</string>
    <string name="menu">Menu</string>
    <string name="add">Ajouter</string>
    <string name="update">Modifier</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="deleteCategory">Êtes-vous sûr de vouloir supprimer cette catégorie ?</string>
    <string name="deleteSite">Êtes-vous sûr de vouloir supprimer ce site ?</string>
    <string name="warningDelete">Cette catégorie est associée à un site. Vous ne pouvez pas la supprimer.</string>
    <string name="form">Formulaire</string>
    <string name="search">Commencez une recherche</string>
    <string name="distance">Distance</string>
    <string name="hintDistance">420</string>
    <string name="app_name" translatable="false">Aller à Metz</string>
    <string name="noPermissions">Veuillez autoriser le partage des données de localisation et des fichiers et contenus multimédia dans les paramètres de l\'application!</string>
    <string name="localisationNotPossible">Localisation impossible, votre GPS est-il activé ?</string>
</resources>