<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/siteIdTV"
        android:visibility="invisible"
        android:text="-1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/addOrUpdateSiteTV"
        android:text="@string/addSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/siteLabelTV"
        android:text="@string/labelSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/addOrUpdateSiteTV"
        app:layout_constraintBottom_toBottomOf="@id/siteLabelET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/siteLabelET" />

    <EditText
        android:id="@+id/siteLabelET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints=""
        android:textSize="14sp"
        android:hint="@string/hintSite"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/addOrUpdateSiteTV"
        app:layout_constraintLeft_toRightOf="@id/siteLabelTV"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/siteLatitudeTV"
        android:text="@string/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/siteLabelTV"
        app:layout_constraintBottom_toBottomOf="@id/siteLatitudeET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/siteLatitudeET" />

    <EditText
        android:id="@+id/siteLatitudeET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:autofillHints=""
        android:maxLength="8"
        android:hint="@string/hintLatitude"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/siteLabelTV"
        app:layout_constraintLeft_toRightOf="@id/siteLatitudeTV"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/siteLongitudeTV"
        android:text="@string/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/siteLatitudeTV"
        app:layout_constraintBottom_toBottomOf="@id/siteLongitudeET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/siteLongitudeET" />

    <EditText
        android:id="@+id/siteLongitudeET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:autofillHints=""
        android:maxLength="8"
        android:hint="@string/hintLongitude"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/siteLatitudeTV"
        app:layout_constraintLeft_toRightOf="@id/siteLongitudeTV"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/sitePostalAddrTV"
        android:text="@string/postalAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/siteLongitudeTV"
        app:layout_constraintBottom_toBottomOf="@id/sitePostalAddrET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/sitePostalAddrET" />

    <EditText
        android:id="@+id/sitePostalAddrET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints=""
        android:hint="@string/hintPostalAddress"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/siteLongitudeTV"
        app:layout_constraintLeft_toRightOf="@id/sitePostalAddrTV"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/siteCategoryTV"
        android:text="@string/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/sitePostalAddrTV"
        app:layout_constraintBottom_toBottomOf="@id/siteCategorySPN"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/siteCategorySPN" />

    <Spinner
        android:id="@+id/siteCategorySPN"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/sitePostalAddrTV"
        app:layout_constraintLeft_toRightOf="@id/siteCategoryTV"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/siteSummaryTV"
        android:text="@string/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/siteCategorySPN"
        app:layout_constraintBottom_toTopOf="@id/siteSummaryET"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/siteSummaryET"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:autofillHints=""
        android:hint="@string/hintSummary"
        android:layout_margin="20dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/siteSummaryTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/cancelBTN"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/submitBTN" />

    <Button
        android:id="@+id/submitBTN"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancelBTN"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
