<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/siteLatitudeTV"
        android:text="@string/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/siteLatitudeET"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/siteLatitudeET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:autofillHints=""
        android:enabled="false"
        android:maxLength="8"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/hintLatitude"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/siteLatitudeTV" />

    <TextView
        android:id="@+id/siteLongitudeTV"
        android:text="@string/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/siteLatitudeTV"
        app:layout_constraintBottom_toBottomOf="@id/siteLongitudeET"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/siteLongitudeET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:autofillHints=""
        android:enabled="false"
        android:maxLength="8"
        android:hint="@string/hintLongitude"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/siteLatitudeTV"
        app:layout_constraintLeft_toRightOf="@id/siteLongitudeTV" />

    <TextView
        android:id="@+id/siteCategoryTV"
        android:text="@string/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/siteLongitudeTV"
        app:layout_constraintBottom_toBottomOf="@id/siteCategorySPN"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/siteCategorySPN"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/siteLongitudeTV"
        app:layout_constraintLeft_toRightOf="@id/siteCategoryTV" />

    <TextView
        android:id="@+id/radiusTV"
        android:text="@string/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/siteCategoryTV"
        app:layout_constraintBottom_toBottomOf="@id/radiusET"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/radiusET"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:autofillHints=""
        android:hint="@string/hintDistance"
        android:text="100"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/siteCategoryTV"
        app:layout_constraintLeft_toRightOf="@id/radiusTV"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>
